# Music-Platform-2

./: pyproject.toml  task-2.md
albums/: admin.py  forms.py  models.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_creation_time.py
artists/: admin.py  forms.py  models.py  urls.py  views.py
artists/migrations/: 0001_initial.py
artists/static/artists/: main.css
artists/templates/artists/: artists.html  base.html  form.html
music_platform/: settings.py  urls.py
